--- a/css/new.css
+++ b/css/new.css
@@ -76,3 +76,30 @@ body, html {
 #sendTextButton:hover {
     background-color: #0056b3;
 }
+
+footer {
+    background-color: #060606;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    position: fixed; 
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    z-index: 100; 
+}
+
+footer .social a {
+    color: #dccbc4;
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+footer .social a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
+body {
+    margin-bottom: 60px; 
+}
